--- a/public/style.css
+++ b/public/style.css
@@ -1,30 +1,60 @@
-html, body {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
   font-family: sans-serif;
-  width: 100%;
-  height: 100%;
+  font-weight: 400;
+  line-height: 1.7;
+  
+  box-sizing: border-box;
+  
+  display: flexbox;
 }
 
 h1 {
   text-align: center;
-  font-weight: 100;
+  font-weight: 700;
+  font-size: 5rem;
+  
+  background-color: #eee;
+  color: #333;
+
+  padding: 1rem 3rem;
+
+  position: fixed;
+  bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+
+  z-index: 1;
 }
 
 .carousel {
-  width: 80%;
-  height: 60%;
-  background-color: white;
-  margin: 5em auto;
+  height: 100vh;
+  background-color: #eee;
   background-repeat: no-repeat;
   background-position: center;
+
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes flickerAnimation {
-  0%   { opacity:0; }
-  50%  { opacity: 0.5; }
-  100% { opacity:1; }
+  0%   { opacity: 0.; }
+  50%  { opacity: .5; }
+  100% { opacity: 1.; }
 }
+
 .animate {
   animation: flickerAnimation 1s;
 }
